[project]
name = "corsik_bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "aiogram>=3.17.0",
    "apscheduler>=3.11.0",
    "asyncpg>=0.30.0",
    "colorama>=0.4.6",
    "psutil>=7.0.0",
    "pydantic-settings>=2.7.1",
    "requests>=2.32.3",
    "sqlalchemy>=2.0.38",
    "xlsxwriter>=3.2.2",
    "yoomoney>=0.1.2",
    "greenlet (>=3.2.4,<4.0.0)",
]

[tool.poetry]
package-mode = false